--- a/.gitignore
+++ b/.gitignore
@@ -155,4 +155,4 @@ ENV/
 # mypy
 .mypy_cache/
 3.ConvolutionalNeuralNetworks/intro-to-tensorflow/notMNIST*
-
+project2-image-classification/cifar-10-python.tar.gz
