--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,4 @@ ENV/
 .mypy_cache/
 3.ConvolutionalNeuralNetworks/intro-to-tensorflow/notMNIST*
 project2-image-classification/cifar-10-python.tar.gz
+project2-image-classification/preprocess_*
