--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,7 @@ project2-image-classification/preprocess_*
 *.DS_Store
 5.GenerativeAdversarialNetworks/batch-norm/MNIST_data/
 5.GenerativeAdversarialNetworks/data/
+5.GenerativeAdversarialNetworks/semi-supervised/data/
+5.GenerativeAdversarialNetworks/dcgan-svhn/data/
+
+*.DS_Store
